# KDE-Sub_quadratic

./: .gitignore  CMakeLists.txt  Makefile
Deann/src/: KdeEstimator.hpp  deann.cpp
Google_tests/: CMakeLists.txt  GeoTest.cpp  SubMatrixManipulation.cpp  Var_Finder.cpp  VertexSamplingTest.cpp
Google_tests/functionality/: AliasTest.cpp
Google_tests/speed_tests/: SpeedTest.cpp  SpeedTestingCalculation.cpp
Sqnn/: error.md
Sqnn/Diagram/: Class_V1.0.0.puml  Interface_V1.0.0.puml
Sqnn/data/: nasa  nasa-2k.data
Sqnn/docs/: error.md  notes.md
Sqnn/src/: Alias.hpp  IoOperation.h  IoOperation.hpp  KDE.h  KDE.hpp  KdeNaive.h  KdeNaive.hpp  KdeSampling.h  KdeSampling.hpp  KdeUsingMrpt.h  KdeUsingMrpt.hpp  KdeUsingMrpt2.h  KdeUsingMrpt2.hpp  Mrpt.h  controller.h  controller.hpp  geometric.h  kernel.h  kernelFunction.h  kernel_function.h  kernel_function.hpp  main.cpp  main.h  sample.h  sample.hpp  supportFunctions.h
Sqnn/src/ANN/: ANN.h  Mrpt.h  mrptmodule.cpp
Sqnn/src/API/: KDE.h  kernelFunction.h  multi-levelKDE.h
Sqnn/src/ENUM/: kernelType.h
Sqnn/src/KDE/: KDE.cpp  KDE.h  KDE_exact.cpp  KDE_exact.h  ml-KDE_array.h
Sqnn/test/: 24-03-11_testData.txt  TFucntionality.h
